# chessSendiri

./: CMakeLists.txt  main.cpp
